welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:4: error: ';' expected but 'else' found.
} else {return false}} 
  ^sleepIn:5: error: Unmatched closing brace '}' ignored here
 }
 ^